--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/043e51ac62.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>to-do...</title>
 </head>
 
 <body>
